syntax="proto3"; //声明了protobuf的版本
 
package fix;  //声明了代码所在的包（对于C++来说是namespace）

//定义下面的选项，表示生成service服务类和rpc方法描述； 如果不定义，默认不生成
option cc_generic_services=true;

//数据、列表、映射表
//响应类型的消息可提取出回复模板
message ResultCode{
    int32 errcode=1;
    bytes errmsg=2;
}

//定义登录请求信息类型 name pwd， 1表示name是第一个字段
//string 改成 bytes字节存储，省略了字符与字节自动转换，可提高效率
message LoginRequest{
    // string name=1;
    bytes name=1;
    bytes pwd=2;
}

//定义登录响应消息类型
message LoginResponse{
    ResultCode result=1;
    bool success=2;
}

message GetFriendListsRequest{
    uint32 userid=1;
}

message user{
    bytes name=1;
    uint32 age=2;
    enum Sex{
         MAN=0;
         WOMAN=1;
    }
    Sex sex=3;
}

message GetFriendListsResponse{
    ResultCode result=1;
    repeated user friend_list=2; //定义一个列表类型
}

//在protobuf里面定义描述rpc方法的类型 ，只是描述方法、用于序列化和反序列化数据，不实现任何rpc方法
service UserServiceRpc{
    rpc Login(LoginRequest) returns(LoginResponse);
    rpc GetFriendLists(GetFriendListsRequest) returns(GetFriendListsResponse);
}
